--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@ body {
   background-color: #dddddd;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #333;
+  }
 }
