--- a/src/navigation.module.css
+++ b/src/navigation.module.css
@@ -1,6 +1,6 @@
   .nav {
     background-color: rgb(71, 71, 71);
-    padding: .5em;
+    --navbar-thickness: 3em;
   }
   
   .nav > ul {
@@ -10,15 +10,19 @@
   }
   
   .nav > ul > li {
-    display: inline;
-    margin-right: 1em;
+    display: inline-block;
+    height: 100%;
   }
   
   .nav > ul > li > a {
+    display: inline-block;
     color: white;
-    padding: .5em;
+    height: 100%;
     background-color: grey;
     text-decoration: none;
+    line-height: var(--navbar-thickness);
+    padding-left: 1em;
+    padding-right: 1em;
   }
   
   .nav > ul > li > a:hover {
@@ -27,8 +31,4 @@
   
   .nav > ul > li > a:active {
     background-color: black;
-  }
-  
-  .nav > ul > li > a:focus {
-    outline: 2px solid rgb(185, 185, 185);
   }
