--- a/src/article.module.css
+++ b/src/article.module.css
@@ -16,6 +16,21 @@
     max-width: 800px;
     padding: 1em;
     background-color: var(--article-background-color);
+    /* animation-name: appear;
+    animation-duration: .4s;
+    animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1); */
+}
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+        transform: scale(.9);
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 .p {
@@ -63,6 +78,19 @@
 
 .h1 {
     color: var(--title-text-color);
+    font-size: 2rem;
+}
+
+.h2 {
+    font-size: 1.5rem;
+}
+
+.h3 {
+    font-size: 1.2rem;
+}
+
+.h4 {
+    font-size: 1.1rem;
 }
 
 .a {
