--- a/src/graphViewer.module.css
+++ b/src/graphViewer.module.css
@@ -26,6 +26,7 @@
 }
 
 .nodedata {
+    --nodeID: "ID";
     display: none;
     position: absolute;
     top: -1px;
@@ -34,7 +35,7 @@
     box-shadow: 0px 0px 7px -3px rgb(0, 0, 0), 0px 0px 3px -2px black;
     border-radius: .2em;
     border-top-left-radius: 25px;
-    padding: 20px;
+    padding: 14px;
     background-color: #333;
     z-index: 103;
     align-items: flex-start;
@@ -43,6 +44,22 @@
     animation-name: appear;
     animation-duration: .25s;
     animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.nodedata::before {
+    content: var(--nodeID);
+    text-align: center;
+    text-anchor: middle;
+    width: 50px;
+    height: 50px;
+    top: 0px;
+    left: 0px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 50%;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @keyframes appear {
@@ -54,6 +71,11 @@
     100% {
         opacity: 1;
     }
+}
+
+.nodeTitle {
+    margin-left: 45px;
+    font-weight: 800;
 }
 
 .nodedata > span {
