--- a/src/graphViewer.module.css
+++ b/src/graphViewer.module.css
@@ -7,6 +7,21 @@
     z-index: 100;
     position: relative;
     user-select: none;
+    overflow: clip;
+}
+
+.container2 {
+    height: 100%;
+    width: 100%;
+}
+
+input.range {
+    position: absolute;
+    width: 35%;
+    margin: 3px;
+    right: 6px;
+    z-index: 106;
+    background-color: #00000000;
 }
 
 .node {
@@ -82,13 +97,17 @@
     font-weight: 800;
 }
 
-.nodedata > span {
+.nodedata > * {
     color: #eee;
     user-select: none;
 }
 
 .node:hover > .nodedata {
-    display: flex;
+    display: block;
+}
+
+p.nData {
+    margin-top: 14px;
 }
 
 .link {
@@ -103,3 +122,97 @@
     left: 200px;
     transform: rotate(-30deg);
 }
+
+
+
+
+
+/* generated with: https://www.cssportal.com/style-input-range/ */
+
+input[type=range] {
+    height: 23px;
+    -webkit-appearance: none;
+  }
+  input[type=range]:focus {
+    outline: none;
+  }
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 5px;
+    
+    
+    box-shadow: 0px 0px 0px #000000;
+    background: #2B61CC;
+    border-radius: 3px;
+    border: 0px solid #000000;
+  }
+  input[type=range]::-webkit-slider-thumb {
+    box-shadow: 0px 0px 1px #000000;
+    border: 1px solid #000000;
+    height: 16px;
+    width: 16px;
+    border-radius: 8px;
+    background: #FFFFFF;
+    
+    -webkit-appearance: none;
+    margin-top: -6px;
+  }
+  input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #2B61CC;
+  }
+  input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 5px;
+    
+    
+    box-shadow: 0px 0px 0px #000000;
+    background: #2B61CC;
+    border-radius: 3px;
+    border: 0px solid #000000;
+  }
+  input[type=range]::-moz-range-thumb {
+    box-shadow: 0px 0px 1px #000000;
+    border: 1px solid #000000;
+    height: 16px;
+    width: 16px;
+    border-radius: 8px;
+    background: #FFFFFF;
+    
+  }
+  input[type=range]::-ms-track {
+    width: 100%;
+    height: 5px;
+    
+    
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+  }
+  input[type=range]::-ms-fill-lower {
+    background: #2B61CC;
+    border: 0px solid #000000;
+    border-radius: 6px;
+    box-shadow: 0px 0px 0px #000000;
+  }
+  input[type=range]::-ms-fill-upper {
+    background: #2B61CC;
+    border: 0px solid #000000;
+    border-radius: 6px;
+    box-shadow: 0px 0px 0px #000000;
+  }
+  input[type=range]::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 0px 0px 1px #000000;
+    border: 1px solid #000000;
+    height: 16px;
+    width: 16px;
+    border-radius: 8px;
+    background: #FFFFFF;
+    
+  }
+  input[type=range]:focus::-ms-fill-lower {
+    background: #2B61CC;
+  }
+  input[type=range]:focus::-ms-fill-upper {
+    background: #2B61CC;
+  }
