--- a/src/graphViewer.module.css
+++ b/src/graphViewer.module.css
@@ -139,8 +139,8 @@ input[type=range] {
   input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
     height: 5px;
-    
-    
+    cursor: pointer;
+    animate: 0.2s;
     box-shadow: 0px 0px 0px #000000;
     background: #2B61CC;
     border-radius: 3px;
@@ -153,7 +153,7 @@ input[type=range] {
     width: 16px;
     border-radius: 8px;
     background: #FFFFFF;
-    
+    cursor: pointer;
     -webkit-appearance: none;
     margin-top: -6px;
   }
@@ -163,8 +163,8 @@ input[type=range] {
   input[type=range]::-moz-range-track {
     width: 100%;
     height: 5px;
-    
-    
+    cursor: pointer;
+    animate: 0.2s;
     box-shadow: 0px 0px 0px #000000;
     background: #2B61CC;
     border-radius: 3px;
@@ -177,13 +177,13 @@ input[type=range] {
     width: 16px;
     border-radius: 8px;
     background: #FFFFFF;
-    
+    cursor: pointer;
   }
   input[type=range]::-ms-track {
     width: 100%;
     height: 5px;
-    
-    
+    cursor: pointer;
+    animate: 0.2s;
     background: transparent;
     border-color: transparent;
     color: transparent;
@@ -208,7 +208,7 @@ input[type=range] {
     width: 16px;
     border-radius: 8px;
     background: #FFFFFF;
-    
+    cursor: pointer;
   }
   input[type=range]:focus::-ms-fill-lower {
     background: #2B61CC;
