--- a/src/graphViewer.module.css
+++ b/src/graphViewer.module.css
@@ -13,6 +13,7 @@
 .container2 {
     height: 100%;
     width: 100%;
+    cursor: move;
 }
 
 input.range {
@@ -140,7 +141,6 @@ input[type=range] {
     width: 100%;
     height: 5px;
     cursor: pointer;
-    animate: 0.2s;
     box-shadow: 0px 0px 0px #000000;
     background: #2B61CC;
     border-radius: 3px;
@@ -164,7 +164,6 @@ input[type=range] {
     width: 100%;
     height: 5px;
     cursor: pointer;
-    animate: 0.2s;
     box-shadow: 0px 0px 0px #000000;
     background: #2B61CC;
     border-radius: 3px;
@@ -183,7 +182,6 @@ input[type=range] {
     width: 100%;
     height: 5px;
     cursor: pointer;
-    animate: 0.2s;
     background: transparent;
     border-color: transparent;
     color: transparent;
