--- a/src/article.module.css
+++ b/src/article.module.css
@@ -43,16 +43,17 @@
     color: var(--text-color);
 }
 
-.code {
+div.code {
     color: var(--code-text-color);
     background-color: var(--code-background-color);
     border: 1px solid var(--code-border-color);
     padding: .2em;
     line-height: 1.2em;
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+    overflow-x: auto;
 }
 
-.code > * {
+div.code > * {
     color: var(--code-text-color);
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
@@ -109,6 +110,16 @@
     margin-bottom: 1em;
     margin-top: 1em;
     max-width: 70%;
+}
+
+.bq {
+    border: 1px solid grey;
+    border-left: 10px solid grey;
+    margin: .4em;
+    margin-left: 1em;
+    padding: .5em;
+    padding-left: .8em;
+    background-color: rgb(245, 245, 245);
 }
 
 @media (prefers-color-scheme: dark) {
