--- a/src/article.module.css
+++ b/src/article.module.css
@@ -104,7 +104,7 @@ div.code > * {
 }
 
 .img {
-    height: 300px;
+    max-height: 300px;
     display: block;
     margin: 0 auto;
     margin-bottom: 1em;
