--- a/src/navigation.module.css
+++ b/src/navigation.module.css
@@ -1,11 +1,12 @@
   .nav {
-    background-color: rgb(71, 71, 71);
-    --navbar-thickness: 3em;
+    background-color: rgb(0, 0, 0);
+    --navbar-thickness: 2.4em;
+    box-shadow: 0px 0px 10px -3px #000000dd, 0px 0px 3px -1px black;
   }
   
   .nav > ul {
     list-style: none;
-    padding: 0;
+    padding: 5px;
     padding-left: 1em;
   }
   
@@ -18,17 +19,50 @@
     display: inline-block;
     color: white;
     height: 100%;
-    background-color: grey;
+    background-color: rgb(39, 39, 39, 0);
+    border-radius: 2em;
     text-decoration: none;
     line-height: var(--navbar-thickness);
     padding-left: 1em;
     padding-right: 1em;
+    transition: .1s;
   }
   
   .nav > ul > li > a:hover {
-    background-color: darkgrey;
+    background-color: rgb(0, 110, 255);
   }
   
   .nav > ul > li > a:active {
-    background-color: black;
+    background-color: rgb(0, 82, 189);
+    box-shadow: inset 0px 0px 10px -2px black, inset 0px 0px 3px 0px black;
+    transform: scale(0.98);
+  }
+
+  div.head {
+    background: linear-gradient(90deg, rgb(0, 58, 134), rgb(52, 140, 255));
+  }
+
+  div.head > a {
+    text-decoration: none;
+  }
+
+  div.logo {
+    max-width: 10em;
+    height: 3.6em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  div.logo > :first-child {
+    color: white;
+    /* margin-right: .2em; */
+    font-size: 1.6em;
+    font-weight: 600;
+  }
+
+  div.logo > :last-child {
+    color: rgb(163, 204, 255);
+    font-size: 1.6em;
   }
