--- a/src/article.module.css
+++ b/src/article.module.css
@@ -7,6 +7,7 @@
     --title-text-color: rgb(20, 97, 197);
     --link-text-color: rgb(40, 141, 204);
     --link-hover-color: rgb(78, 168, 225);
+    --link-active-color: rgb(192, 241, 255);
     --bq-highlight: rgb(0, 110, 255);
     --bq-background: rgb(249, 253, 255);
     color: var(--text-color);
@@ -33,6 +34,7 @@
         --title-text-color: rgb(57, 139, 246);
         --link-text-color: rgb(145, 206, 244);
         --link-hover-color: rgb(78, 168, 225);
+        --link-active-color: rgb(10, 59, 73);
         --bq-highlight: rgb(38, 83, 143);
         --bq-background: rgb(0, 0, 0);
     }
