--- a/src/markdown.module.css
+++ b/src/markdown.module.css
@@ -103,6 +103,10 @@ code.code {
     background-color: var(--link-active-color);
 }
 
+.a:visited {
+    color: var(--link-visited-color);
+}
+
 .img {
     max-height: 300px;
     display: block;
