--- a/src/graphViewer.module.css
+++ b/src/graphViewer.module.css
@@ -17,12 +17,70 @@
 }
 
 input.range {
-    position: absolute;
-    width: 35%;
-    margin: 3px;
-    right: 6px;
-    z-index: 106;
     background-color: #00000000;
+    width: 100%;
+}
+
+div.settings {
+  font-weight: 400;
+  font-family: 'Inter', sans-serif;
+  font-size: 13px;
+  padding: .4em;
+  position: absolute;
+  width: 300px;
+  max-width: 60%;
+  margin: 3px;
+  right: 6px;
+  top: 6px;
+  border-radius: 6px;
+  z-index: 106;
+  background-color: rgb(226, 226, 226);
+  border: 1px solid black;
+}
+
+div.settings > button {
+  font-weight: 400;
+  font-family: 'Inter', sans-serif;
+  font-size: 13px;
+  color: white;
+  display: inline-block;
+  margin-right: .4em;
+  margin-bottom: .4em;
+  padding: .4em;
+  padding-left: .6em;
+  padding-right: .6em;
+  border-radius: .4em;
+  border: 1px solid rgb(0, 42, 84);
+  cursor: pointer;
+  transition: .1s;
+  background-color: rgb(0, 93, 186);
+  box-shadow: inset 0px 4px 8px -4px rgb(175, 215, 255);
+  white-space: nowrap;
+}
+
+div.settings > button:hover {
+  background-color: rgb(21, 127, 233);
+}
+
+div.settings > button:active {
+  background-color: rgb(4, 88, 171);
+  box-shadow: inset 0px 0px 6px -2px rgb(28, 28, 28);
+}
+
+div.settings > div {
+  background-color: rgb(249, 249, 249);
+  border: 1px solid grey;
+  padding: .4em;
+  margin-bottom: .4em;
+  border-radius: .4em;
+}
+
+div.settings > label {
+  display: block;
+  background-color: rgb(250, 250, 250);
+  border: 1px solid grey;
+  padding: .4em;
+  border-radius: .4em;
 }
 
 .node {
