--- a/src/graphViewer.module.css
+++ b/src/graphViewer.module.css
@@ -36,6 +36,7 @@ div.settings {
   z-index: 106;
   background-color: rgb(226, 226, 226);
   border: 1px solid black;
+  color: black;
 }
 
 div.settings > button {
@@ -46,15 +47,15 @@ div.settings > button {
   display: inline-block;
   margin-right: .4em;
   margin-bottom: .4em;
-  padding: .4em;
-  padding-left: .6em;
-  padding-right: .6em;
-  border-radius: .4em;
-  border: 1px solid rgb(0, 42, 84);
+  padding: .5em;
+  padding-left: .7em;
+  padding-right: .7em;
+  border-radius: .5em;
+  border: 0px solid rgb(0, 42, 84);
+  box-shadow: 0px 0px 3px -1px rgb(0, 42, 84);
   cursor: pointer;
   transition: .1s;
   background-color: rgb(0, 93, 186);
-  box-shadow: inset 0px 4px 8px -4px rgb(175, 215, 255);
   white-space: nowrap;
 }
 
